# M9DSE

./: .gitignore  CMakeLists.txt  FunctionApprox.h  FuzzyApprox.cpp  FuzzyApprox.h  FuzzyWrapper.cpp  MPI.README  Makefile  README.md  RuleList.cpp  RuleList.h  SVN.README  TODO  alg_dep.cpp  alg_genetic.cpp  alg_random.cpp  alg_sensivity.cpp  cacti_area_interface.h  common.cpp  common.h  environment.h  estimator.cpp  estimator.h  explorer.cpp  explorer.h  ga.txt  hash.h  main.cpp  matlab_interface.cpp  matlab_interface.h  model_inverter.cpp  model_inverter.h  parameter.cpp  parameter.h  post_install.sh  simulate_space.cpp  space.conf  space_ON.conf  space_all.conf  space_single.conf  (+5 more)
SiC_Turn_OFF_Modeling/: Simula.m  Simula_orig.m  data_off_10A_2.2Ohm.mat  error_HL.txt  error_IdH.txt  error_IdL.txt  error_VdsH.txt  error_VdsL.txt  error_VgsH.txt  error_VgsL.txt  params.m
SiC_Turn_OFF_Modeling/Mac/: Simula.m  Simula_orig.m!  data_off_10A_2.2Ohm.mat
SiC_Turn_ON_Modeling/: ._Simula-orig.m  Simula-orig.m  Simula.m  data_on_10A_10Ohm.mat  data_on_50A_10Ohm.mat  error.txt  error_HL.txt  error_IdH.txt  error_IdL.txt  error_VdsH.txt  error_VdsL.txt  error_VgsH.txt  error_VgsL.txt  matlab  params.m  params_orig.m  serve.m  simula_server.m  tcpip.mat
http/: GA_825.pareto.exp  GA_825.stat  M9DSE.txt  index.html  out.sh  params.template  params.template.1  pareto.latest  pareto.latest.json  pareto.latest.tsv  pareto.latest.txt  run_with_screen.sh  screenlog.txt  status.txt
tools/: getDataTips.m  openParetoFig.m  params_rS.m  run_Simula.m  show_pareto.m  write_space_conf.m
(+489 files in other folders)
